# Raytracer

./: .gitignore  .gitmodules  AmbientOcclusionBehabiourCheck.py  BlenderExport.py  BlenderImport.py  BlenderToRay.py  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  README.md  cmake_install.cmake  deleteme  log.txt  pink  ray  ray.txt  raytracer  reference  test.ppm  visualization.py  vizu.py
bonus/electronJs/: config.json  index.html  main.js  package-lock.json  package.json
bonus/vite-project/: index.html  package-lock.json  package.json
config/: cercle_test.cfg  config.cfg  config.conf  config_gl.cfg  config_v1.cfg  config_v2.cfg  d_interior.cfg  exemple_gloal.conf  interior.cfg  judgemental.cfg  lurking.cfg  mesh_demo.cfg  mosaic.cfg  on_the_wall.cfg  room.cfg  simple_test.cfg  snowman.cfg  susanne.cfg  test_triangle.cfg  testing_all_primitive.v.cfg  transparent.cfg  truelord.cfg
documentation/: Camera_8hpp_source.html  ConfigLoader_8hpp_source.html  DLLoader_8hpp_source.html  Entity_8hpp_source.html  FlatMaterial_8gl_8hpp_source.html  ILight_8hpp_source.html  IMaterial_8hpp_source.html  IOpglPrimitiveHelper_8hpp_source.html  IPlugin_8hpp_source.html  IPrimitive_8hpp_source.html  LightModel_8hpp_source.html  Opgl_8hpp_source.html  PluginManager_8hpp_source.html  Plugin_8hpp_source.html  Ray_8hpp_source.html  Renderer_8hpp_source.html  SSBO_8hpp_source.html  ShaderPlugin_8hpp_source.html  ShaderProgram_8hpp_source.html  TrianglePrimitiveHelper_8gl_8hpp_source.html  Triangle_8primitive_8gl_8hpp_source.html  Triangle_8primitive_8v_8hpp_source.html  VBO_8hpp_source.html  Wrapper_8gl_8hpp_source.html  Wrapper_8hpp_source.html  Wrapper_8v_8hpp_source.html  annotated.html  classOpgl-members.html  classOpgl.html  classSSBO-members.html  classSSBO.html  classShaderProgram-members.html  classShaderProgram.html  classVBO-members.html  classVBO.html  classes.html  classgpu_1_1FlatMaterial__gl-members.html  classgpu_1_1FlatMaterial__gl.html  classgpu_1_1IOpGLPrimitiveHelper-members.html  classgpu_1_1IOpGLPrimitiveHelper.html  (+75 more)
documentation/html/: AObject_8hpp_source.html  Camera_8hpp_source.html  Ecs_8hpp_source.html  IObject_8hpp_source.html  Light_8hpp_source.html  Pipeline_8hpp_source.html  (+160 more)
include/: AEntity.hpp  AObject.hpp  Camera.hpp  ConfigLoader.hpp  Ecs.hpp  IObject.hpp  Light.hpp  Pipeline.hpp  Plane.hpp  PluginManager.hpp  Ray.hpp  Render.hpp  SceneLoader.hpp  Setup.hpp  Sphere.hpp  Triangle.hpp  operations.hpp
new/: CMakeLists.txt
new/src/plugins/Vanille/: CMakeLists.txt
plugin/: ITexture.hpp
plugins/: FastRender.cpp
plugins/OpenGL/: CMakeCache.txt  CMakeLists.txt  Makefile  PluginOpenGL.cpp  PluginShader.gl.cpp  PluginSpherePrimitive.gl.cpp  SpherePrimitive.gl.cpp  Wrapper.gl.cpp  cmake_install.cmake  opgl_main_test.cpp
plugins/OpenGL/glad/include/glad/: gl.h
plugins/OpenGL/shaders/: fs_learn_triangle.glsl  learn_triangle.glsl  vs_learn_triangle.glsl
plugins/OpenGL/v2/: CMakeLists.txt  intersect.frag  main.cpp  main.frag  vertex.vert
plugins/OpenGL/v2/glfw/: cmake_uninstall.cmake
plugins/Vanille/: CMakeCache.txt  CMakeLists.txt  Lighting.process.v.cpp  Makefile  Sphere.primitive.v.cpp  Wrapper.v.cpp  cmake_install.cmake
src/: AEntity3D.cpp  AObject.cpp  AWrapper.cpp  Camera.cpp  Camera.hpp  ConfigLoader.cpp  ConfigLoader.hpp  DLLoader.cpp  Entity.cpp  Entity.hpp  Entity3D.cpp  Intercection.cpp  Intersection.cpp  Light.cpp  LightModel.cpp  LightModel.hpp  Logger.cpp  Plane.cpp  Plugin.cpp  PluginManager.cpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  SceneLoader.cpp  Sphere.cpp  Triangle.cpp  geometry.cpp  geometry.hpp  main.cpp  operations.cpp  renderColors.hpp
src/plugins/OpenGL/: CMakeLists.txt  FlatMaterial.gl.cpp  FlatMaterial.gl.hpp  IOpglPrimitiveHelper.hpp  Opgl.cpp  Opgl.hpp  SSBO.cpp  SSBO.hpp  ShaderPlugin.cpp  ShaderPlugin.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Triangle.primitive.gl.cpp  Triangle.primitive.gl.hpp  TrianglePrimitiveHelper.gl.cpp  TrianglePrimitiveHelper.gl.hpp  VBO.cpp  VBO.hpp  Wrapper.gl.cpp  Wrapper.gl.hpp  blendColors.frag  blinnPhong.frag  intersect.frag  light.frag  main.cpp  main.frag  pluginOpenGL  reflect.frag  trace.frag  vertex.vert
src/plugins/OpenGL/glad/src/: gl.c
src/plugins/OpenGL/glfw/: cmake_uninstall.cmake
src/plugins/OpenGL/glfw/docs/: Doxyfile
src/plugins/Vanille/: AmbientLight.v.cpp  ApplyIntersect.process.v.cpp  ApplyReflections.process.v.cpp  CMakeLists.txt  Cercle.primitive.v.cpp  Cercle.primitive.v.hpp  Cylinder.primitive.v.cpp  Cylinder.primitive.v.hpp  Directional.light.v.cpp  Disk.light.v.hpp  Flat.material.v.cpp  Flat.material.v.hpp  Flat.texture.v.cpp  Flat.texture.v.hpp  Lighting.process.v.cpp  Lighting.process.v.hpp  Plane.primitive.v.cpp  Plane.primitive.v.hpp  Sphere.primitive.v.cpp  Sphere.primitive.v.hpp  Triangle.primitive.v.cpp  Triangle.primitive.v.hpp  Wrapper.v.cpp  Wrapper.v.entryPoint.cpp  Wrapper.v.hpp  deleteme.cpp
src/plugins/Vanille/Lights/: AmbientLight.v.cpp  AmbientLight.v.hpp  Directional.light.v.cpp  Directional.light.v.hpp  Disk.light.v.cpp  Disk.light.v.hpp
src/plugins/Vanille/Materials/: Check.material.v.cpp  Check.material.v.hpp  Flat.material.v.cpp  Texture.material.v.cpp  Texture.material.v.hpp
src/plugins/Vanille/Primitives/: Cercle.primitive.v.cpp  Cercle.primitive.v.hpp  CercleEntryPoint.cpp  Cone.primitive.v.cpp  Cone.primitive.v.hpp  Cylinder.primitive.v.cpp  Cylinder.primitive.v.hpp  CylinderEntryPoint.cpp  Mesh.primitive.v.cpp  Mesh.primitive.v.hpp  Plane.primitive.v.cpp  Plane.primitive.v.hpp  Sphere.primitive.v.cpp  Sphere.primitive.v.hpp  TrianglePart.entryPoint.cpp  TrianglePart.primitive.v.cpp
src/plugins/Vanille/Processes/: AmbientLight.process.v.cpp  AmbientLight.process.v.hpp  AmbientOcclusion.process.v.cpp  AmbientOcclusion.process.v.hpp  Antialiasing.process.v.cpp  ApplyIntersect.process.v.cpp  ApplyPointLights.process.v.cpp  ApplyReflections.process.v.cpp  Bloom.process.v.cpp  Bloom.process.v.hpp  applyTransparency.process.v.cpp
test/: CMakeLists.txt  testMath.cpp  test_virtualOD.cpp  unit_tests
(+131 files in other folders)
